@@ -1,21 +1,0 @@
-   [र]
-       मम पराणसमा भार्या दष्टासीद भुजगेन ह
-       तत्र मे समयॊ घॊर आत्मनॊरग वै कृतः
-  हन्यां सदैव भुजगं यं यं पश्येयम इत्य उत
-       ततॊ ऽहं तवां जिघांसामि जीवितेन विमॊक्ष्यसे
-   [दु]
-       अन्ये ते भुजगा विप्र ये दशन्तीह मानवान
-       डुण्डुभान अहि गन्धेन न तवं हिंसितुम अर्हसि
-  एकान अर्थान पृथग अर्थान एकदुःखान पृथक सुखान
-       डुण्डुभान धर्मविद भूत्वा न तवं हिंसितुम अर्हसि
-   [सूत]
-       इति शरुत्वा वचस तस्य भुजगस्य रुरुस तदा
-       नावदीद भयसंविग्न ऋषिं मत्वाथ डुण्डुभम
-  उवाच चैनं भगवान रुरुः संशमयन्न इव
-       कामया भुजग बरूहि कॊ ऽसीमां विक्रियां गतः
-   [दु]
-       अहं पुरा रुरॊ नाम्ना ऋषिर आसं सहस्रपात
-       सॊ ऽहं शापेन विप्रस्य भुजगत्वम उपागतः
-   [रु]
-       किमर्थं शप्तवान करुद्धॊ दविजस तवां भुजगॊत्तम
-       कियन्तं चैव कालं ते वपुर एतद भविष्यति
