@@ -1,0 +1,21 @@
+version: "1.0"
+name: "Rudram Namakam - Part 1"
+podcast_paths:
+  - "../media/Rudram.wav"
+bgm: "../media/ancient_rythm.mp3"
+cover_art: "../media/namakam.png"
+description: "This given text is the Sri Rudra Prasnam from the Taittiriya Samhita of the Krishna Yajurveda. It is primarily used for worshipping Lord Rudra. In this text, various aspects and attributes of Lord Shiva are praised. The first part prays for appeasing Rudra's anger and obtaining his mercy. In the later sections, Lord Shiva's various deeds, states, and powers are mentioned. Overall, it is a powerful Vedic prayer compilation for worshipping Rudra. #RudraPrasnam
+#LordShiva
+#VedicChants
+#SpiritualJourney
+#DivineMercy
+#ShivaDevotion
+#Hinduism
+#AncientWisdom
+#PowerOfPrayer
+#TaittiriyaSamhita
+#KrishnaYajurveda
+#SpiritualAwakening
+#Meditation
+#InnerPeace
+#Bhakti"
