@@ -1,0 +1,22 @@
+version: "1.0"
+name: "Rudram Namakam - Part 2"
+podcast_paths:
+  - "../media/rudram_2.wav"
+bgm: "../media/ancient_rythm.mp3"
+cover_art: "../media/namakam.png"
+description: "The given sections are from various parts of Sri Rudram. This is a Vedic mantra that praises and worships Lord Shiva in various forms, contexts, and aspects. These sections describe Rudra's various names, his powers, his mercy, and his anger. The mantras are aimed at seeking Rudra's grace and protection from death.
+#RudraPrasnam
+#LordShiva
+#VedicChants
+#SpiritualJourney
+#DivineMercy
+#ShivaDevotion
+#Hinduism
+#AncientWisdom
+#PowerOfPrayer
+#TaittiriyaSamhita
+#KrishnaYajurveda
+#SpiritualAwakening
+#Meditation
+#InnerPeace
+#Bhakti"
